Fix: Missing Wrapper and Header increasing size on Hamburger Menu Toggle -The former was happening because we changed the icon's size. Even though we modified its z-index to make it look like its over the pop-up window navbar it is still part of the header.

--- a/styles/header.css
+++ b/styles/header.css
@@ -84,9 +84,6 @@
   }
 
   .toggler:checked + .toggler__label .toggler__icon {
-    width: 40px;
-    height: 40px;
-
     background-image: url('../assets/x.svg');
     background-size: cover;
     background-repeat: no-repeat;
